--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="google-site-verification" content="GOZVQhuisx399G9d3jc1A8IIIMtVaVmzBURSMhaesOI" />
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131460239-1"></script>
